--- a/template/index.html
+++ b/template/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>{{ name }}</title>
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="/static/js/vendor.dll.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
