--- a/template/src/styles/normalize.scss
+++ b/template/src/styles/normalize.scss
@@ -13,6 +13,14 @@
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+* {
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
 /* Sections
    ========================================================================== */
 
